BasicInputScreen
    Basic input screen creation